--- a/public/blog.html
+++ b/public/blog.html
@@ -14,7 +14,7 @@
 <form>
   <div class="form-group">
     <label for="userName">User Name</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <input type="email" class="form-control" id="userName" placeholder="User Name">
   </div>
   <div class="form-group">
     <label for="title">Title</label>
@@ -22,23 +22,13 @@
   </div>
 
   <div class="form-group">
-    <label for="exampleFormControlSelect2">Example multiple select</label>
-    <select multiple class="form-control" id="exampleFormControlSelect2">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <label for="text">text</label>
+    <textarea class="form-control" id="text" rows="10"></textarea>
   </div>
 </form>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
+  <script type="text/javascript" src="js/blog.js"></script>
 
 </body>
 
