--- a/public/members.html
+++ b/public/members.html
@@ -7,25 +7,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
   <link href="stylesheets/style.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 
 <body>
   <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/logout">
-        Logout
-      </a>
-    </div>
-  </div>
-</nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Welcome <span class="member-name"></span></h2>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/logout">
+          Logout
+        </a>
       </div>
     </div>
+  </nav>
+
+  <div class="container">
+    <header class="blog-header py-3">
+      <div class="row align-items-center">
+        <div class="col-sm-3"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Contribute</button>
+        </div>
+        <div class="col-sm-6 text-center">
+          <h1>The Traveler's Memoir</h1>
+        </div>
+        <div class="col-sm-3">
+          <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </header>
+
+
+    <div class="jumbotron text-white bg-dark">
+      <div class="container">
+        <h1 class="display-4 font-italic">Welcome Member Name!</h1>
+        <p class="lead my-3">We're glad you're here.</p>
+        <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Learn more...</a></p> -->
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="card">
+          <!-- <i class="fab fa-wpexplorer fa-10x"></i> -->
+          <h5 class="card-header">Search by Destination</h5>
+          <div class="card-body">
+            <h5 class="card-title">Traveler Experiences</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Explore</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="card">
+          <!-- <i class="fas fa-pen-fancy fa-9x"></i> -->
+          <h5 class="card-header">Share Your Experiences</h5>
+          <div class="card-body">
+            <h5 class="card-title">Traveler Experiences</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Write</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
   </div>
+
+
+  
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/members.js"></script>
