--- a/public/blog.html
+++ b/public/blog.html
@@ -11,6 +11,11 @@
 
 <body>
 
+<header>
+<h1>Write Your Blog</h2>
+</header>
+
+
 <form>
   <div class="form-group">
     <label for="userName">User Name</label>
@@ -22,9 +27,10 @@
   </div>
 
   <div class="form-group">
-    <label for="text">text</label>
+    <label for="text">Text</label>
     <textarea class="form-control" id="text" rows="10"></textarea>
   </div>
+  <button type="submit" class="btn btn-default" id="submit">Create Blog</button>
 </form>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
