updated backedn code and added username to welcome

--- a/public/members.html
+++ b/public/members.html
@@ -29,6 +29,8 @@
       <div class="row align-items-center">
         <div class="col-sm-3"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Contribute</button>
         </div>
+        <div class="col-sm-3"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Post a Blog</button>
+        </div>
         <div class="col-sm-6 text-center">
           <h1>The Traveler's Memoir</h1>
         </div>
@@ -44,7 +46,7 @@
 
     <div class="jumbotron text-white bg-dark">
       <div class="container">
-        <h1 class="display-4 font-italic">Welcome Member Name!</h1>
+        <h1 id="member-name"class="display-4 font-italic">Welcome Member Name!</h1>
         <p class="lead my-3">We're glad you're here.</p>
         <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Learn more...</a></p> -->
       </div>
