Updated html file

--- a/public/login.html
+++ b/public/login.html
@@ -12,31 +12,100 @@
 </head>
 
 <body>
-  <div style="background-image: url('https://a0.muscache.com/im/pictures/de26f95b-fc03-4918-9df9-e3be5593adc8.jpg?im_w=1680');">
+  <h1>The Traveler's Memoir</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2>Login</h2>
+        <form class="login">
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="email-input" placeholder="Email">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password-input" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-default">Login</button>
+        </form>
+        <br />
+        <p>Or sign up <a href="/public/signup.html">here</a></p>
+      </div>
+    </div>
+  </div>
 
-    <h1>The Traveler's Memoir</h1>
+  <!-- Footer -->
+  <footer class="page-footer font-small indigo">
     <div class="container">
+      <div class="row pt-5 mb-3">
+        <div class="col-md-4">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!">About us</a>
+          </h6>
+        </div>
+
+        <!-- Grid column -->
+        <div class="col-md-4">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!">Help</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4">
+          <h6 class="text-uppercase font-weight-bold">
+            <a href="#!">Contact</a>
+          </h6>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h2>Login</h2>
-          <form class="login">
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="email-input" placeholder="Email">
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="password-input" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-default">Login</button>
-          </form>
-          <br />
-          <p>Or sign up <a href="/public/signup.html">here</a></p>
+        <div class="col-md-12">
+          <hr class="rgba-white-light" style="margin: 0 15%;">
+        </div>
+      </div>
+      <!-- Grid row-->
+      <div class="row d-flex text-center justify-content-center mt-5" style="margin-top:100px;">
+
+        <!-- Grid column -->
+        <div class="col-md-12">
+          <p class="about" style="line-height: 1.7rem">Plan your next tracel trip route with The Traveler's Memoir.
+            Enter where you want to
+            start and finish your trip, and then discover other travler's experiences and making planning the unexpected
+            easier than you thought.
+            Most of what you find online will funnel you into the same places, filled with other travelers.
+            It can feel like you need a local guide to get an authentic experience on your trip,
+            but The Traveler's Memoir helps you escape the tourist bubble and find the best stops.</p>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row-->
+      <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+
+      <!-- Grid row-->
+      <div class="row pb-3">
+
+        <!-- Grid column -->
+        <div class="col-md-12">
+
+          <div class="mb-5 flex-center">
+          </div>
         </div>
       </div>
     </div>
+    <!-- Footer Links -->
 
-  </div>
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
+  </footer>
+  <!-- Footer -->
+
+
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/login.js"></script>
