--- a/public/signup.html
+++ b/public/signup.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <h1>The Traveler's Memoir</h1>
+  <h1 class="title">The Traveler's Memoir</h1>
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
@@ -28,7 +28,7 @@
             <input type="password" class="form-control" id="password-input" placeholder="Password">
             <br>
             <label for="exampleInputPassword1">Re-enter Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <input type="password" class="form-control" id="re-password-input" placeholder="Password">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -37,49 +37,41 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Or log in <a href="/public/login.html">here</a></p>
+        <div class="link col-lg-12">
+          <p class="login col-md-6 col-lg-6">Or log in <a href="/login.html">here</a></p>
+          <p class="alert col-md-6 col-lg-7" id="alert"></p>
+        </div>
+
       </div>
     </div>
-  </div>
 
-  <!-- Footer -->
-  <footer class="page-footer font-small indigo">
-    <div class="container">
-      <div class="row pt-5 mb-3">
-        <div class="col-md-4">
+
+    <!-- Footer -->
+    <footer class="page-footer font-small indigo text-center justify-content-center">
+
+      <div class="navigation col-lg-12">
+        <div class="col-md-3">
           <h6 class="text-uppercase font-weight-bold">
             <a href="#!">About us</a>
           </h6>
         </div>
 
-        <!-- Grid column -->
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h6 class="text-uppercase font-weight-bold">
             <a href="#!">Help</a>
           </h6>
         </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-4">
+        <div class="col-md-3">
           <h6 class="text-uppercase font-weight-bold">
             <a href="#!">Contact</a>
           </h6>
         </div>
-        <!-- Grid column -->
-        <!-- Grid row-->
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <hr class="rgba-white-light" style="margin: 0 15%;">
-        </div>
       </div>
 
-      <!-- Grid row-->
-      <div class="row d-flex text-center justify-content-center mb-md-0 mb-4" style="margin-top:100px;">
+      <hr>
 
-        <!-- Grid column -->
-        <div class="col-md-12">
+      <div class="col-md-12" style="margin: 3rem 0rem">
         <p class="about" style="line-height: 1.7rem">Plan your next tracel trip route with The Traveler's Memoir.
           Enter where you want to
           start and finish your trip, and then discover other travler's experiences and making planning the unexpected
@@ -88,29 +80,13 @@
           It can feel like you need a local guide to get an authentic experience on your trip,
           but The Traveler's Memoir helps you escape the tourist bubble and find the best stops.</p>
       </div>
-      <!-- Grid column -->
 
-    </div>
-    <!-- Grid row-->
-    <hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+      <hr>
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
 
-    <!-- Grid row-->
-    <div class="row pb-3">
-
-      <!-- Grid column -->
-      <div class="col-md-12">
-
-        <div class="mb-5 flex-center">
-        </div>
-      </div>
-    </div>
-    </div>
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
-
-  </footer>
-  <!-- Footer -->
+    </footer>
+  </div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
