--- a/public/signup.html
+++ b/public/signup.html
@@ -38,7 +38,7 @@
         </form>
         <br />
         <div class="link col-lg-12">
-          <p class="login col-md-6 col-lg-6">Or log in <a href="/login.html">here</a></p>
+          <p class="log col-md-6 col-lg-6">Or log in <a href="/login.html">here</a></p>
           <p class="alert col-md-6 col-lg-7" id="alert"></p>
         </div>
 
