--- a/public/members.html
+++ b/public/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Passport Authentication</title>
+  <title>The Traveler's Memoir</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
@@ -23,28 +23,31 @@
       </div>
     </div>
   </nav>
+  
+  <h1 class="title">The Traveler's Memoir</h1>
+  
 
   <div class="container">
-    <header class="blog-header py-3">
-      <div class="row align-items-center">
-        <div class="col-sm-3"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Contribute</button>
-        </div>
-        <div class="col-sm-3"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Post a Blog</button>
+    <!-- <header class="blog-header py-3">
+      <div class="row">
+        <div class="col-sm-8 align-space-between"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Contribute</button>
+      
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Post a Blog</button>
         </div>
         <div class="col-sm-6 text-center">
           <h1>The Traveler's Memoir</h1>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-4 align-end">
           <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </div>
-    </header>
+    </header> -->
 
 
-    <div class="jumbotron text-white bg-dark">
+    <div class="jumbotron" style="opacity: 0.8">
       <div class="container">
         <h1 id="member-name"class="display-4 font-italic">Welcome Member Name!</h1>
         <p class="lead my-3">We're glad you're here.</p>
@@ -52,27 +55,25 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row align-space-between">
       <div class="col-sm-6">
-        <div class="card">
+        <div class="card text-center">
           <!-- <i class="fab fa-wpexplorer fa-10x"></i> -->
-          <h5 class="card-header">Search by Destination</h5>
+          <h2 class="card-header">Traveler Experiences</h2>
           <div class="card-body">
-            <h5 class="card-title">Traveler Experiences</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Explore</a>
+            <h4 class="card-text">Discover new stories from our community .</h4>
+            <button type="button" href="#" class="btn member btn-primary btn-lg"><i class="fas fa-glasses fa-lg"></i>Explore</button>
           </div>
         </div>
       </div>
 
       <div class="col-sm-6">
-        <div class="card">
+        <div class="card text-center">
           <!-- <i class="fas fa-pen-fancy fa-9x"></i> -->
-          <h5 class="card-header">Share Your Experiences</h5>
+          <h2 class="card-header">Share Your Stories</h2>
           <div class="card-body">
-            <h5 class="card-title">Traveler Experiences</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Write</a>
+            <h4 class="card-text">Contribute your own experience to our collection.</h4>
+            <button type="button" class="btn member btn-primary btn-lg"><i class="fas fa-pen fa-lg"></i>Write</button>
           </div>
         </div>
       </div>
