changed email sign in to memberupdated signup page

--- a/public/signup.html
+++ b/public/signup.html
@@ -20,6 +20,10 @@
         <h2>Sign Up</h2>
         <form class="signup">
           <div class="form-group">
+            <label for="exampleInputUsername1">Username</label>
+            <input type="text" class="form-control" id="user-name-input" placeholder="Username">
+          </div>
+          <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
@@ -27,8 +31,8 @@
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
             <br>
-            <label for="exampleInputPassword1">Re-enter Password</label>
-            <input type="password" class="form-control" id="re-password-input" placeholder="Password">
+            <label for="exampleInputReEnterPassword1">Re-enter Password</label>
+            <input type="password" class="form-control" id="re-password-input" placeholder="Re-Enter Password">
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
