--- a/public/members.html
+++ b/public/members.html
@@ -25,6 +25,8 @@
   </nav>
   
   <h1 class="title">The Traveler's Memoir</h1>
+  <button id="blog" class="btn btn-outline-success my-2 my-sm-0" type="button">Post a Blog</button>
+    
   
 
   <div class="container">
