added navbars to all of our pages

--- a/public/login.html
+++ b/public/login.html
@@ -1,91 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>The Traveler's Memoir</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link href="stylesheets/style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900"
+      rel="stylesheet"
+    />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <title>The Traveler's Memoir</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link href="stylesheets/style.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <h1 class="title">The Traveler's Memoir</h1>
-  
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h2>Login</h2>
-        <form class="login">
-          <div class="form-group">
-            <label for="exampleInputEmail1">Username</label>
-            <input type="text" class="form-control" id="username-input" placeholder="Username">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-          </div>
-          <button type="submit" class="btn btn-default">Login</button>
-        </form>
-        <br />
-        <div class="link col-lg-12">
-          <p class="log col-md-6 col-lg-6">Or sign up <a href="/signup.html">here</a></p>
-          <p class="alert col-md-6 col-lg-7" id="alert"></p>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#" id="logo">The Traveler's Memoir</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto links">
+          <span class="my-span"
+            ><a class="nav-item nav-link active link-color" href="/members"
+              ><i class="fas fa-user"></i
+              ><span class="sr-only">(current)</span></a
+            ></span
+          >
+          <span class="my-span"
+            ><a class="nav-item nav-link link-color" href="/blog"
+              >Create New Blog</a
+            ></span
+          >
+          <span class="my-span"
+            ><a class="nav-item nav-link link-color" href="/">Sign out</a></span
+          >
         </div>
       </div>
+    </nav>
+    <h1 class="title">The Traveler's Memoir</h1>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          <h2>Login</h2>
+          <form class="login">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Username</label>
+              <input
+                type="text"
+                class="form-control"
+                id="username-input"
+                placeholder="Username"
+              />
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input
+                type="password"
+                class="form-control"
+                id="password-input"
+                placeholder="Password"
+              />
+            </div>
+            <button type="submit" class="btn btn-default blog-btn">Login</button>
+          </form>
+          <br />
+          <div class="link col-lg-12">
+            <p class="log col-md-6 col-lg-6">
+              Or sign up <a href="/signup.html">here</a>
+            </p>
+            <p class="alert col-md-6 col-lg-7" id="alert"></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer
+        class="page-footer font-small indigo text-center justify-content-center"
+      >
+        <div class="navigation col-lg-12">
+          <div class="col-md-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">About us</a>
+            </h6>
+          </div>
+
+          <!-- Grid column -->
+          <div class="col-md-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Help</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3">
+            <h6 class="text-uppercase font-weight-bold">
+              <a href="#!">Contact</a>
+            </h6>
+          </div>
+          <!-- Grid column -->
+          <!-- Grid row-->
+        </div>
+
+        <hr />
+
+        <div class="col-md-12" style="margin: 3rem 0rem">
+          <p class="about" style="line-height: 1.7rem">
+            Plan your next tracel trip route with The Traveler's Memoir. Enter
+            where you want to start and finish your trip, and then discover
+            other travler's experiences and making planning the unexpected
+            easier than you thought. Most of what you find online will funnel
+            you into the same places, filled with other travelers. It can feel
+            like you need a local guide to get an authentic experience on your
+            trip, but The Traveler's Memoir helps you escape the tourist bubble
+            and find the best stops.
+          </p>
+        </div>
+        <!-- Copyright -->
+        <hr />
+
+        <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
+      </footer>
     </div>
 
-    <!-- Footer -->
-    <footer class="page-footer font-small indigo text-center justify-content-center">
-
-      <div class="navigation col-lg-12">
-        <div class="col-md-3">
-          <h6 class="text-uppercase font-weight-bold">
-            <a href="#!">About us</a>
-          </h6>
-        </div>
-
-        <!-- Grid column -->
-        <div class="col-md-3">
-          <h6 class="text-uppercase font-weight-bold">
-            <a href="#!">Help</a>
-          </h6>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-3">
-          <h6 class="text-uppercase font-weight-bold">
-            <a href="#!">Contact</a>
-          </h6>
-        </div>
-        <!-- Grid column -->
-        <!-- Grid row-->
-      </div>
-
-      <hr>
-
-      <div class="col-md-12" style="margin: 3rem 0rem">
-        <p class="about" style="line-height: 1.7rem">Plan your next tracel trip route with The Traveler's Memoir.
-          Enter where you want to
-          start and finish your trip, and then discover other travler's experiences and making planning the unexpected
-          easier than you thought.
-          Most of what you find online will funnel you into the same places, filled with other travelers.
-          It can feel like you need a local guide to get an authentic experience on your trip,
-          but The Traveler's Memoir helps you escape the tourist bubble and find the best stops.</p>
-      </div>
-      <!-- Copyright -->
-      <hr>
-
-      <div class="footer-copyright text-center py-3">© 2020 Copyright</div>
-    </footer>
-  </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/login.js"></script>
-
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
+  </body>
 </html>
