added code to convert the user's searched info to get geo locations

--- a/public/members.html
+++ b/public/members.html
@@ -134,6 +134,8 @@
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="js/members.js"></script>
   <script type="text/javascript" src="js/calendar.js"></script>
+  <script type="text/javascript" src="js/amadeus.js"></script>
+
 
 </body>
 
