added new explore div and updated style properties for button links

--- a/public/members.html
+++ b/public/members.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#" id="logo">The Traveler's Memoir</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -33,54 +34,37 @@
     </div>
   </nav>
 
-  <h1 class="title">The Traveler's Memoir</h1>
+  <!-- <h1 class="title">The Traveler's Memoir</h1> -->
 
   <div class="container">
-    <!-- <header class="blog-header py-3">
-      <div class="row">
-        <div class="col-sm-8 align-space-between"><button class="btn btn-outline-success my-2 my-sm-0" type="submit">Contribute</button>
-      
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Post a Blog</button>
-        </div>
-        <div class="col-sm-6 text-center">
-          <h1>The Traveler's Memoir</h1>
-        </div>
-        <div class="col-sm-4 align-end">
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </header> -->
 
-    <div class="jumbotron" style="opacity: 0.8">
+
+    <div class="jumbotron">
       <div class="container">
         <h1 id="member-name" class="display-4 font-italic">
           Welcome Member Name!
         </h1>
         <p class="lead my-3">We're glad you're here.</p>
-        <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Learn more...</a></p> -->
       </div>
     </div>
 
     <div class="row align-space-between">
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <div class="card text-center">
           <!-- <i class="fab fa-wpexplorer fa-10x"></i> -->
           <h2 class="card-header">Traveler Experiences</h2>
           <div class="card-body">
             <h4 class="card-text">
-              Discover new stories from our community .
+              Discover new stories from our community blog.
             </h4>
-            <button type="button" href="#" class="btn member btn-primary btn-lg">
-              <i class="fas fa-glasses fa-lg"></i>Explore
-            </button>
+            <a type="button" href="/blogs" class="btn member btn-primary btn-lg">
+              <i class="fas fa-glasses fa-lg"></i>READ
+            </a>
           </div>
         </div>
       </div>
 
-      <div class="col-sm-6">
+      <div class="col-sm-4">
         <div class="card text-center">
           <!-- <i class="fas fa-pen-fancy fa-9x"></i> -->
           <h2 class="card-header">Share Your Stories</h2>
@@ -88,9 +72,23 @@
             <h4 class="card-text">
               Contribute your own experience to our collection.
             </h4>
-            <button type="button" class="btn member btn-primary btn-lg">
-              <i class="fas fa-pen fa-lg"></i>Write
-            </button>
+            <a type="button" href="blog.html" class="btn member btn-primary btn-lg">
+              <i class="fas fa-pen fa-lg"></i>WRITE
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4">
+        <div class="card text-center">
+          <h2 class="card-header">Explore Our Resources</h2>
+          <div class="card-body">
+            <h4 class="card-text">
+              Check out our resources for travel ideas & inspiration.
+            </h4>
+            <a type="button" href="explore.html" class="btn member btn-primary btn-lg">
+              <i class="fas fa-pen fa-lg"></i>EXPLORE
+            </a>
           </div>
         </div>
       </div>
@@ -98,6 +96,7 @@
   </div>
   <br>
 
+  
   <h4>Calendar</h4>
 
   <div id="calendar" class="container">
