fixed the links issue in our members page

--- a/public/members.html
+++ b/public/members.html
@@ -27,10 +27,10 @@
     </button>
     <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto links">
-        <span class="my-span"><a class="nav-item nav-link active link-color" href="/members"><i
-              class="fas fa-user"></i><span class="sr-only">(current)</span></a></span>
-        <span class="my-span"><a class="nav-item nav-link link-color" href="/blog">Create New Blog</a></span>
-        <span class="my-span"><a class="nav-item nav-link link-color" href="/">Sign out</a></span>
+        <span><a class="nav-item nav-link active" href="/members"><i
+              class="fas fa-user"></i><span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="/blog">Create New Blog</a>
+        <a class="nav-item nav-link" href="/logout">Logout</a>
       </div>
 
     </div>
@@ -76,7 +76,7 @@
             <h4 class="card-text">
               Contribute your own experience to our collection.
             </h4>
-            <a type="button" href="blog.html" class="btn member btn-primary btn-lg">
+            <a type="button" href="/blog" class="btn member btn-primary btn-lg">
               <i class="fas fa-pen fa-lg"></i>WRITE
             </a>
           </div>
