updated navbar style for member, blog & explore html pages

--- a/public/members.html
+++ b/public/members.html
@@ -17,22 +17,21 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" id="logo">
-      <h1 class="title">The Traveler's Memoir</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="opacity: 0.8">
+    <a class="navbar-brand mb-0 h1" style="font-size: 2rem" href="#" id="logo">
+      The Traveler's Memoir
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto links">
-        <span><a class="nav-item nav-link active" href="/members"><i
-              class="fas fa-user"></i><span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/blog">Create New Blog</a>
-        <a class="nav-item nav-link" href="/logout">Logout</a>
-      </div>
-
+      <ul class="navbar-nav ml-auto links">
+        <li class="nav-item"><span><a class="nav-link active" href="/members"><i class="fas fa-user"></i><span
+              class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><a class="nav-item nav-link" href="/blog">Create New Blog</a></li>
+                <li class="nav-item"><a class="nav-item nav-link" href="/logout">Logout</a></li>
+      </ul>
     </div>
   </nav>
 
@@ -106,7 +105,7 @@
     </div>
   </div>
   <br>
- 
+
   <!-- <h4>Calendar</h4>
 
 
@@ -138,10 +137,10 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script>
+    </script>
   <script type="text/javascript" src="js/members.js"></script>
   <script type="text/javascript" src="js/calendar.js"></script>
   <script type="text/javascript" src="js/amadeus.js"></script>
