--- a/public/blog.html
+++ b/public/blog.html
@@ -14,21 +14,22 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" id="logo">The Traveler's Memoir</a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" style="opacity: 0.8">
+    <a class="navbar-brand mb-0 h1" style="font-size: 2rem" href="#" id="logo">
+      The Traveler's Memoir
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse " id="navbarNavAltMarkup" >
-        <div class="navbar-nav ml-auto links">
-
-            <span class="my-span"><a class="nav-item nav-link active link-color" href="/members"><i class="fas fa-user"></i><span class="sr-only">(current)</span></a></span>
-            <span class="my-span"><a class="nav-item nav-link link-color" href="/blog">Create New Blog</a></span>
-            <span class="my-span"><a class="nav-item nav-link link-color" href="/">Sign out</a></span>
-        </div>
+    <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+      <ul class="navbar-nav ml-auto links">
+        <li class="nav-item"><a class="nav-item nav-link" href="/members"><i class="fas fa-user"></i></a></li>
+              <li class="nav-item"><span><a class="nav-link active" href="/blog">Create New Blog<span class="sr-only">(current)</span></a></li>
+                <li class="nav-item"><a class="nav-item nav-link" href="/logout">Logout</a></li>
+      </ul>
     </div>
-</nav>
+  </nav>
 
 <section>
 
