--- a/public/explore.html
+++ b/public/explore.html
@@ -5,7 +5,8 @@
     <title>The Traveler's Memoir</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="stylesheets/style.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <!-- <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/logout">
@@ -23,14 +24,31 @@
                 </a>
             </div>
         </div>
+    </nav> -->
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="opacity: 0.8">
+        <a class="navbar-brand mb-0 h1" style="font-size: 2rem" href="#" id="logo">
+            The Traveler's Memoir
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+            <ul class="navbar-nav ml-auto links">
+                <li class="nav-item"><a class="nav-item nav-link" href="/members"><i class="fas fa-user"></i></a></li>
+                <li class="nav-item"><a class="nav-item nav-link" href="/blog">Create New Blog</a></li>
+                <li class="nav-item"><a class="nav-item nav-link" href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </nav>
 
-    <h1 class="title">The Traveler's Memoir</h1>
+    <!-- <h1 class="title">The Traveler's Memoir</h1> -->
 
 
-    <div class="container explore text-center">
-        <div class="row">
-            <h1 style="font-size: 75px">EXPLORE</h1>
+    <div class="container explore text-center mt-5">
+        <div class="row text-center">
+            <h1 class="explore">EXPLORE</h1>
         </div>
 
         <div class="row justify-content-center align-space-between">
@@ -45,19 +63,19 @@
             <div class="col-sm-3">
 
                 <a href="#ideas" class="explore">
-                <div class="card">
-                    <i class="far fa-lightbulb fa-4x"></i>
-                    <h3>Inspiration</h3>
-                </div>
+                    <div class="card">
+                        <i class="far fa-lightbulb fa-4x"></i>
+                        <h3>Inspiration</h3>
+                    </div>
                 </a>
             </div>
 
             <div class="col-sm-3">
                 <a href="#stay" class="explore">
-                <div class="card">
-                    <i class="fas fa-hotel fa-4x"></i>
-                    <h3>Stay</h3>
-                </div>
+                    <div class="card">
+                        <i class="fas fa-hotel fa-4x"></i>
+                        <h3>Stay</h3>
+                    </div>
                 </a>
             </div>
 
@@ -94,7 +112,20 @@
         <div id="outdoors" class="row justify-content-center align-space-between"></div>
     </div>
 
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script> -->
+
+    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="js/explore.js"></script>
 
 </body>
