added backend code

--- a/public/members.html
+++ b/public/members.html
@@ -51,6 +51,14 @@
         <!-- <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Learn more...</a></p> -->
       </div>
     </div>
+    <div class="jumbotron row container" style="opacity: 0.8">
+          <div class="jumbotron tours-activities" id="tours-activities" style="opacity: 0.8">
+          
+          </div>
+          <div class="jumbotron tours-activities" style="opacity: 0.8">
+
+          </div>
+    </div>
     <div class="row align-space-between">
       <div class="col-sm-6">
         <div class="card text-center">
@@ -92,32 +100,6 @@
   </div>
   <br>
 
-  <!-- <h4>Calendar</h4>
-
-  <div id="calendar" class="container">
-    <div class="calendar">
-      <div class="month"><i class="fas fa-angle-left prev"></i>
-        <div class="date">
-          <h5></h5>
-          <p></p>
-        </div>
-        <i class="fas fa-angle-right next"></i>
-      </div>
-      <div class="weekdays">
-        <div>Sun</div>
-        <div>Mon</div>
-        <div>Tue</div>
-        <div>Wed</div>
-        <div>Thu</div>
-        <div>Fri</div>
-        <div>Sat</div>
-      </div>
-      <div class="days">
-      </div>
-    </div>
-
-  </div> -->
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -128,6 +110,7 @@
   </script>
   <script type="text/javascript" src="js/members.js"></script>
   <script type="text/javascript" src="js/calendar.js"></script>
+  <script type="text/javascript" src="js/amadeus.js"></script>
 
 </body>
 
